--- a/package.json
+++ b/package.json
@@ -1,16 +1,62 @@
 {
-  "name": "landingpage",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
-    "package": "svelte-kit package",
-    "preview": "svelte-kit preview"
-  },
-  "devDependencies": {
+	"name": "landingpage",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "env-cmd svelte-kit dev -p 3030",
+		"build": "svelte-kit build",
+		"preview": "svelte-kit preview",
+		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. .",
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+		"postinstall": "patch-package"
+	},
+	"devDependencies": {
+		"@iconify/json": "^1.1.457",
+		"@sveltejs/adapter-vercel": "next",
     "@sveltejs/adapter-auto": "next",
-    "@sveltejs/kit": "next",
-    "svelte": "^3.44.0"
-  },
-  "type": "module"
+		"@sveltejs/kit": "^1.0.0-next.232",
+		"@tailwindcss/typography": "^0.5.0-alpha.3",
+		"autoprefixer": "^10.4.2",
+		"daisyui": "^1.24.2",
+		"env-cmd": "^10.1.0",
+		"graphql": "^16.2.0",
+		"graphql-request": "^3.7.0",
+		"prettier": "^2.5.1",
+		"prettier-plugin-svelte": "^2.6.0",
+		"sass": "^1.48.0",
+		"svelte": "^3.46.2",
+		"svelte-hamburgers": "^3.0.1",
+		"svelte-preprocess": "^4.10.2",
+		"tailwindcss": "^3.0.15",
+		"unplugin-icons": "^0.12.23"
+	},
+	"type": "module",
+	"dependencies": {
+		"@iconify-json/bx": "^1.0.3",
+		"@iconify-json/mdi-light": "^1.0.1",
+		"@iconify/collections": "^1.0.49",
+		"@iconify/svelte": "^2.1.1",
+		"@iconify/utils": "^1.0.21",
+		"@sveltejs/adapter-node": "^1.0.0-next.0",
+		"@sveltejs/adapter-static": "^1.0.0-next.0",
+		"@tailwindcss/forms": "^0.4.0",
+		"@urql/core": "^2.3.6",
+		"@urql/svelte": "^1.3.3",
+		"bezier-easing": "^2.1.0",
+		"canvas-sketch": "^0.7.4",
+		"canvas-sketch-cli": "^1.11.14",
+		"canvas-sketch-util": "^1.10.0",
+		"cheerio": "^1.0.0-rc.10",
+		"chroma-js": "^1.3.7",
+		"lorem-ipsum": "^2.0.4",
+		"node-fetch": "^3.1.1",
+		"patch-package": "^6.4.7",
+		"postcss": "^8.4.5",
+		"random-word-slugs": "^0.1.6",
+		"svelte-checkbox": "^1.0.1",
+		"svelte-color-picker": "^1.0.7",
+		"svelte-select": "^4.4.7",
+		"svelte-time": "^0.6.1",
+		"tippy.js": "^6.3.7",
+		"tweakpane": "^3.0.7"
+	}
 }
