--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
 	},
 	"devDependencies": {
 		"@iconify/json": "^1.1.457",
+		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/adapter-vercel": "next",
-    "@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "^1.0.0-next.232",
 		"@tailwindcss/typography": "^0.5.0-alpha.3",
 		"autoprefixer": "^10.4.2",
 		"daisyui": "^1.24.2",
 		"env-cmd": "^10.1.0",
+		"glob-parent": "^5.1.2",
 		"graphql": "^16.2.0",
 		"graphql-request": "^3.7.0",
 		"prettier": "^2.5.1",
